--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,9 +1,9 @@
 /* PC */
-@media (min-width:1024px){
+@media (min-width:64em){
 
 }
 /* Tablet và mobile */
-@media (max-width: 1023px) {
+@media (max-width: 63.9375em) {
     #nav .subnav a {
         padding: 5px 12px;
     }
@@ -30,12 +30,12 @@
 }
 
 /* Tablet */
-@media (min-width:740px) and (max-width:1023px){
+@media (min-width:46.25em) and (max-width:63.9375em){
 
 }
 
 /* Mobile */
-@media (max-width:739px) {
+@media (max-width:46.1875em) {
     .s-full-width {
         width: 100% !important;
     }
